# src/app/api/services.ts
@@ -1,3 +1,4 @@
+export { CategoriasService } from './services/categorias.service';
 export { ClientesService } from './services/clientes.service';
 export { LoginService } from './services/login.service';
 export { ProductosService } from './services/productos.service';
